# echo

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  ehlo-server.c  ehlo-shared.c  ehlo-shared.h  ehlo.c
src/c/: CMakeLists.txt
src/c/ehlo/: CMakeLists.txt  ehlo.c
src/c/ehlo-server/: CMakeLists.txt
src/client/c/: ehlo.c
src/server/c/: CMakeLists.txt  ehlo-server.c
